# runix-stm32

./: .gitignore  readme.md
kernel/: Cargo.toml  Embed.toml  build.rs  memory.x
kernel/.cargo/: config.toml
kernel/kernel-macros/: Cargo.toml
kernel/kernel-macros/src/: lib.rs
kernel/src/: constants.rs  critical_section.rs  entry.s  main.rs  types.rs  user.rs
kernel/src/boot/: link.x  mod.rs  start.rs
kernel/src/drivers/: mod.rs
kernel/src/drivers/rtt/: mod.rs
kernel/src/exceptions/: mod.rs  syscalls.rs
kernel/src/hardware/: registers.rs
kernel/src/mem/: heap.rs  mod.rs  state.rs
kernel/src/sched/: mod.rs
